Fix navbar collapse issue and change its color to black.

--- a/public/stylesheets/volume.css
+++ b/public/stylesheets/volume.css
@@ -19,6 +19,10 @@
 	position:absolute;
 }
 
+#tableOfContentLink {
+	display:block;
+}
+
 @media (min-width:768px) {
 	#sidebar {
 		display: block;
@@ -31,6 +35,10 @@
 		left: 260px;
 		right: 0;
 		position: absolute;
+	}
+
+	#tableOfContentLink {
+		display:none;
 	}
 }
 
